--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.1",
     "cors": "^2.8.5",
     "deepl-node": "^1.11.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
